--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -22,7 +22,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href=https://"github.com/gitKarthikap/gitKarthikap/edit/main/qr-code-component-main/index.html">Karthikeyan</a>.
   </div>
 </body>
 </html>
