--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon"  sizes="32x32" href="favicon-32x32.png">
 
   <title>Frontend Mentor | QR code component</title>
 
@@ -15,7 +15,7 @@
 </head>
 <body>
   <div class="Pad">
-    <img class="qrcode"src="images\image-qr-code.png" alt="qrcode" width="250px">
+    <img class="qrcode"src="image-qr-code.png" alt="qrcode" width="250px">
     <h3 class="description">
       Improve your front-end skills by building projects</h3>
 
