--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Frontend Mentor | QR code component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <link rel="stylesheet" href="css\style.css">
+  <link rel="stylesheet" href="style.css">
   <link  href="https://fonts.google.com/specimen/Outfit">
 </head>
 <body>
