--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -10,12 +10,12 @@
   <title>Frontend Mentor | QR code component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <link rel="stylesheet" href="css\style.css">
+  <link rel="stylesheet" href="./css\style.css">
   <link  href="https://fonts.google.com/specimen/Outfit">
 </head>
 <body>
   <div class="Pad">
-    <img class="qrcode"src="images\image-qr-code.png" alt="qrcode" width="250px">
+    <img class="qrcode"src="./images\image-qr-code.png" alt="qrcode" width="250px">
     <h3 class="description">
       Improve your front-end skills by building projects</h3>
 
