--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <link rel="stylesheet" href="./style.css">
-  <link  href="https://fonts.google.com/specimen/Outfit">
+  <link rel="Googlefonts" href="https://fonts.google.com/specimen/Outfit">
 </head>
 <body>
-  <div class="Pad">
+  <div role = "banner" class="Pad">
     <img class="qrcode"src="./image-qr-code.png" alt="qrcode" width="250px">
     <h3 class="description">
       Improve your front-end skills by building projects</h3>
@@ -25,7 +25,7 @@
 
 
 
-      <div class="attribution">
+      <div role ="banner" class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
         Coded by <a href="#">Karthikeyan</a>.
       </div>
