--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 
 <html lang="en">
-  <header>
-
-</header>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,7 +15,7 @@
   <link rel="Googlefonts" href="https://fonts.google.com/specimen/Outfit">
 </head>
 <body>
-  <div role = "banner" class="Pad">
+  <div  class="Pad">
     <img class="qrcode"src="./image-qr-code.png" alt="qrcode" width="250px">
     <h3 class="description">
       Improve your front-end skills by building projects</h3>
