--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | QR code component</title>
-  <link rel="stylesheet" href="css\style.css">
-  <link rel="Googlefonts" href="https://fonts.google.com/specimen/Outfit">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="document" href="https://fonts.google.com/specimen/Outfit">
 </head>
 
 <body>
   <main class="card">
-    <img class="qrcode" src="images\image-qr-code.png" alt="qrcode" width="250">
+    <img class="qrcode" src="images/image-qr-code.png" alt="qrcode" width="250">
     <h1 class="title">
       Improve your front-end skills by building projects</h1>
       <p class="description">
