--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | QR code component</title>
   <link rel="stylesheet" href="/.css/style.css">
-  <link rel="document" href="https://fonts.google.com/specimen/Outfit">
+  <link rel="tag" href="https://fonts.google.com/specimen/Outfit">
 </head>
 
 <body>
